# caption_editor

./: .bazelignore  .bazelrc  .gitignore  .npmrc  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  electron-builder.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
docs/: macos-release-build.md
electron/: constants.ts  main.ts
models/wespeaker-voxceleb-resnet34-LM-onnx/: SOURCE_PROVENANCE.md  config.json  model.onnx
scripts/: dump_nemo_tokens.py  export_parakeet_onnx.py  export_wespeaker_onnx.py  stage-ffmpeg.py  verify-dist-rust.sh
src/: App.vue
tests/electron/: asr-cancel.electron.spec.ts  asr-embed.electron.spec.ts  asr-menu.electron.spec.ts  asr-uvx.electron.spec.ts  full-pipeline.electron.spec.ts  license-dialog.electron.spec.ts
tests/helpers/: shared-electron.ts
tools/: workspace_status.sh
tools/bazel/: BUILD.bazel  check_asr_commit_hash.sh  check_version_consistency.sh  pytest.bzl  pytest_main.py  run_coverage.sh  run_in_workspace.sh  run_playwright.sh
transcribe/: BUILD.bazel  constants.py  embed_cli.py  pyproject.toml  released_rust_asr_test.py  requirements_bazel.txt  transcribe_cli.py  transcribe_rs_parity_test.py  vibevoice_modal.py
transcribe/__snapshots__/: transcribe_cli_test.ambr
transcribe_rs/: .gitignore  BUILD.bazel  Cargo.toml  SPIKE_NOTES.md  version.bzl
transcribe_rs/caption-core/: BUILD.bazel  Cargo.toml
transcribe_rs/caption-core/src/: convert.rs  ffmpeg.rs  lib.rs  parse.rs  pipeline.rs
transcribe_rs/caption-core/tests/: post_processing_pipeline.rs
transcribe_rs/caption-core/tests/snapshots/: post_processing_pipeline__parakeet_chunk_10s.snap  post_processing_pipeline__parakeet_chunk_60s.snap  post_processing_pipeline__whisper_chunk_10s.snap  post_processing_pipeline__whisper_chunk_60s.snap
transcribe_rs/caption-schema/: BUILD.bazel  Cargo.toml
transcribe_rs/caption-schema/src/: lib.rs
transcribe_rs/embed-rs/: BUILD.bazel  Cargo.toml
transcribe_rs/embed-rs/src/: main.rs  umap.rs
transcribe_rs/transcribe-rs/: BUILD.bazel  Cargo.toml
transcribe_rs/transcribe-rs/src/: download.rs  main.rs  parakeet_grouping.rs  recognizer.rs  whisper_recognizer.rs
