load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@npm//:vue-tsc/package_json.bzl", vue_tsc_bin = "bin")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Materialize the npm dep graph from pnpm-lock.yaml into a virtual
# `node_modules/` tree under bazel-out. Downstream rules_js targets
# depend on this; sh_test wrappers find it via runfiles. Source-tree
# `node_modules/` stays around for `npm run dev` / inner-loop use and
# is ignored by Bazel via `.bazelignore`.
npm_link_all_packages(name = "node_modules")

# Static test fixtures referenced by heavy py_test targets via
# `repo_root.REPO_ROOT / "test_data" / "..."`. Bazel materializes them
# into the test's runfiles tree at `_main/test_data/...`, so the
# `Path(__file__).parent.parent` math in transcribe/repo_root.py
# resolves correctly inside the sandbox.
filegroup(
    name = "test_data",
    srcs = glob(
        ["test_data/**"],
        # `test_data/temp/` and `test_data/temp-*/` are gitignored
        # scratch dirs that pytest writes into. Excluding keeps the
        # filegroup deterministic.
        exclude = [
            "test_data/temp/**",
            "test_data/temp-*/**",
        ],
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
)

exports_files([
    "package.json",
    "package-lock.json",
    "pnpm-lock.yaml",
    "tsconfig.json",
    "tsconfig.node.json",
    "vite.config.ts",
    "vite.electron.config.ts",
    "playwright.config.ts",
    "eslint.config.js",
    "index.html",
])

# -----------------------------------------------------------------------------
# Shared input sets
#
# Every TS / Vue / Electron test depends on roughly the same source
# tree. Keeping the globs at the top of the file (rather than inlining
# under each rule) makes it cheap to add new entry points without
# bloating individual rules. `allow_empty = True` on the patterns that
# don't match today (no .tsx files yet) preserves correctness as the
# codebase grows.
# -----------------------------------------------------------------------------
_TS_SRCS = glob(
    [
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/**/*.vue",
        "src/**/*.css",
        "electron/**/*.ts",
    ],
    allow_empty = True,
)

_TS_TEST_SRCS = glob(
    [
        "tests/**/*.ts",
        "tests/**/*.tsx",
    ],
    allow_empty = True,
)

_TS_CONFIG = [
    "package.json",
    "tsconfig.json",
    "tsconfig.node.json",
    "vite.config.ts",
    "vite.electron.config.ts",
    "eslint.config.js",
]

# The Bazel-linked node_modules. Aspect's `npm_link_all_packages`
# emits one target per linked package PLUS a top-level `:node_modules`
# that materializes the whole tree. Downstream test targets include
# `:node_modules` in `data` so all packages are available at runtime.
_NODE_MODULES = [":node_modules"]

# -----------------------------------------------------------------------------
# vue-tsc — TypeScript + Vue SFC type checking. The `vue_tsc_test`
# rule is auto-generated from vue-tsc's package.json `bin` field by
# rules_js; it produces a hermetic test that runs the bin against the
# given args and inputs.
#
# `chdir = package_name()` (= "" here, repo root) makes vue-tsc
# resolve `tsconfig.json` and entry files relative to the workspace,
# matching plain `npx vue-tsc --noEmit`.
# -----------------------------------------------------------------------------
vue_tsc_bin.vue_tsc_test(
    name = "ts_typecheck",
    args = ["--noEmit"],
    chdir = package_name(),
    data = _TS_CONFIG + _TS_SRCS + _TS_TEST_SRCS + _NODE_MODULES,
    timeout = "long",
)

# -----------------------------------------------------------------------------
# Vitest — unit tests. `vitest run` (single-shot, not watch).
# -----------------------------------------------------------------------------
vitest_bin.vitest_test(
    name = "ts_vitest_unit",
    args = ["run"],
    chdir = package_name(),
    data = _TS_CONFIG + _TS_SRCS + _TS_TEST_SRCS + _NODE_MODULES,
    timeout = "long",
)

# -----------------------------------------------------------------------------
# ESLint. Same shape as the others; passes the repo root as the lint
# target. We don't enforce `--max-warnings=0` (the repo currently has
# 489 baseline warnings — promoting them to errors is a separate task).
# -----------------------------------------------------------------------------
eslint_bin.eslint_test(
    name = "ts_eslint",
    args = ["."],
    chdir = package_name(),
    data = _TS_CONFIG + _TS_SRCS + _TS_TEST_SRCS + _NODE_MODULES,
    timeout = "moderate",
)

# -----------------------------------------------------------------------------
# Playwright E2E (Electron). Substantially less straightforward than
# the rules above:
#
#   * Playwright drives an Electron binary, which itself loads the
#     Vite-built renderer bundle from `dist/` + the Electron main
#     bundle from `dist-electron/`. Building those hermetically via
#     bazel is doable (see frankweiler/ui:dist in the mixed_up_files
#     reference) but is a larger lift — for now we keep the existing
#     `npm run test:e2e` script that does the build itself.
#
#   * Playwright's spec walker doesn't follow symlinks (Node's
#     fs.readdir w/ withFileTypes:true reports symlinks as !isFile),
#     so running it against the bazel runfiles tree finds zero tests
#     unless we stage spec files as real files. The dual-mode wrapper
#     handles that the same way mixed_up_files/frankweiler/ui/run_e2e.sh
#     does (rsync -L into a tempdir).
#
# `bazel run  //:e2e_playwright`        — interactive (uses source tree)
# `bazel test //:e2e_playwright`        — hermetic node_modules via runfiles
# -----------------------------------------------------------------------------
# e2e_playwright stays non-hermetic (see run_playwright.sh for why) so
# it doesn't pull the bazel-linked `:node_modules` — only the source
# files whose changes should re-run it.
_E2E_DATA = _TS_CONFIG + _TS_SRCS + _TS_TEST_SRCS + [
    "playwright.config.ts",
    "index.html",
    ":test_data",
]

_E2E_DEPS = ["//tools/bazel:runfiles"]

sh_binary(
    name = "e2e_playwright_bin",
    srcs = ["//tools/bazel:run_playwright.sh"],
    data = _E2E_DATA,
    deps = _E2E_DEPS,
)

sh_test(
    name = "e2e_playwright",
    srcs = ["//tools/bazel:run_playwright.sh"],
    data = _E2E_DATA,
    deps = _E2E_DEPS,
    env_inherit = [
        "PATH",
        "HOME",
        # Linux Xvfb display + headless flag for the test runner.
        "DISPLAY",
        "HEADLESS",
    ],
    tags = [
        "no-sandbox",
        "requires-network",
    ],
    timeout = "eternal",
)

# -----------------------------------------------------------------------------
# Convenience suite: everything in the default `bazel test //...` set.
# -----------------------------------------------------------------------------
test_suite(
    name = "all_tests",
    tests = [
        ":e2e_playwright",
        ":ts_eslint",
        ":ts_typecheck",
        ":ts_vitest_unit",
        "//transcribe:asr_results_to_captions_post_processing_pipeline_test",
        "//transcribe:asr_results_to_captions_test",
        "//transcribe:bulk_cli_test",
        "//transcribe:captions_json5_lib_test",
        "//transcribe:embed_cli_test",
        "//transcribe:remux_mp3_test",
        "//transcribe:transcribe_cli_apollo_test",
        "//transcribe:transcribe_cli_test",
    ],
)
