"""Repo-root Bzlmod module for caption-editor.

This is a polyglot project: Vue/Vite/TypeScript frontend, Electron main
process, Playwright E2E, and a Python `transcribe/` package with heavy
ML deps (torch, nemo-toolkit, pyannote). For this first pass Bazel is a
*test driver*, not a *build driver*:

  * The TS / Electron / Playwright builds remain owned by npm + Vite +
    electron-builder. `npm install` populates `node_modules/`.
  * The Python deps remain owned by `uv` + `transcribe/uv.lock`.
    `uv sync` populates `transcribe/.venv/`.
  * Bazel wraps the existing test commands as `sh_test` targets so
    `bazelisk test //...` becomes the canonical entrypoint and the
    shared disk cache (configured in .bazelrc) memoizes pass/fail
    across checkouts and CI.

Version policy mirrors mixed_up_files: prefer bazel_dep / toolchain
versions that have been out for at least 7 days at the time of pinning.

Follow-ups (intentionally deferred):
  * aspect_rules_js with a pnpm-lock.yaml derived from
    `pnpm import` against the existing package-lock.json — lets Bazel
    own node_modules and run vitest hermetically.
  * rules_python `pip.parse` over `transcribe/requirements.txt`
    (exported from uv.lock) — currently impractical because of the
    torch/nemo wheels, but the smaller post-processing test suite
    (`asr_results_to_captions_post_processing_pipeline_test.py`) is a
    fine starter target.
"""

module(
    name = "caption_editor",
    version = "0.0.0",
)

# Rules Shell — sh_binary / sh_test (split out of bazel core in 8/9).
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "platforms", version = "1.0.0")

# Rules Python — registers a hermetic Python 3.12 toolchain and
# ingests transcribe/requirements_bazel.txt (exported from uv.lock)
# into a `@py_pip` hub repo. Each py_test then depends only on the
# subset of packages it actually imports, so heavy wheels (torch,
# nemo-toolkit, pyannote-audio) only materialize when a test that
# transitively needs them is built.
#
# `transcribe/uv.lock` constrains python to ">=3.11,<3.13"; the
# matching toolchain is 3.12 (most recent in-range).
bazel_dep(name = "rules_python", version = "2.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//transcribe:requirements_bazel.txt",
)
use_repo(pip, "py_pip")
