"""Repo-root Bzlmod module for caption-editor.

This is a polyglot project: Vue/Vite/TypeScript frontend, Electron main
process, Playwright E2E, and a Python `transcribe/` package with heavy
ML deps (torch, nemo-toolkit, pyannote). For this first pass Bazel is a
*test driver*, not a *build driver*:

  * The TS / Electron / Playwright builds remain owned by npm + Vite +
    electron-builder. `npm install` populates `node_modules/`.
  * The Python deps remain owned by `uv` + `transcribe/uv.lock`.
    `uv sync` populates `transcribe/.venv/`.
  * Bazel wraps the existing test commands as `sh_test` targets so
    `bazelisk test //...` becomes the canonical entrypoint and the
    shared disk cache (configured in .bazelrc) memoizes pass/fail
    across checkouts and CI.

Version policy mirrors mixed_up_files: prefer bazel_dep / toolchain
versions that have been out for at least 7 days at the time of pinning.

Follow-ups (intentionally deferred):
  * aspect_rules_js with a pnpm-lock.yaml derived from
    `pnpm import` against the existing package-lock.json — lets Bazel
    own node_modules and run vitest hermetically.
  * rules_python `pip.parse` over `transcribe/requirements.txt`
    (exported from uv.lock) — currently impractical because of the
    torch/nemo wheels, but the smaller post-processing test suite
    (`asr_results_to_captions_post_processing_pipeline_test.py`) is a
    fine starter target.
"""

module(
    name = "caption_editor",
    version = "0.0.0",
)

# Rules Shell — sh_binary / sh_test (split out of bazel core in 8/9).
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "platforms", version = "1.0.0")

# Rules Python — registers a hermetic Python 3.12 toolchain and
# ingests transcribe/requirements_bazel.txt (exported from uv.lock)
# into a `@py_pip` hub repo. Each py_test then depends only on the
# subset of packages it actually imports, so heavy wheels (torch,
# nemo-toolkit, pyannote-audio) only materialize when a test that
# transitively needs them is built.
#
# `transcribe/uv.lock` constrains python to ">=3.11,<3.13"; the
# matching toolchain is 3.12 (most recent in-range).
bazel_dep(name = "rules_python", version = "2.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//transcribe:requirements_bazel.txt",
)
use_repo(pip, "py_pip")

# aspect_rules_js — hermetic JS/TS toolchain. Backs the vitest /
# vue-tsc / eslint / playwright test targets in //:BUILD.bazel so they
# resolve packages against a Bazel-linked `node_modules/` derived from
# `pnpm-lock.yaml`, instead of whatever `npm install` left on the host.
#
# The source of truth for JS deps remains `package.json`. We keep
# `package-lock.json` so `npm install` still works for devs who haven't
# switched their inner loop to pnpm, and the matching `pnpm-lock.yaml`
# is generated by `pnpm import` (`pnpm` reads npm's lock and writes its
# own). Bumping any dep means re-running `pnpm import` to refresh
# pnpm-lock.yaml — otherwise the Bazel-linked tree will lag the npm one.
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    # `.npmrc` settings (legacy-peer-deps=true, etc.) must be visible
    # to pnpm during dep resolution; without this declaration
    # aspect_rules_js refuses to start.
    npmrc = "//:.npmrc",
    verify_node_modules_ignored = "//:.bazelignore",
    # `@vue/test-utils` (used by every component-level vitest) does
    # `require("@vue/compiler-dom")` from its CJS entry point. In a
    # strict pnpm tree that require fails because compiler-dom is a
    # peer of vue and isn't hoisted to top-level node_modules. Lifting
    # it (and a few peers known to follow the same pattern) here gives
    # @vue/test-utils a stable resolution path without expanding the
    # full `public-hoist-pattern[]=*` net, which can interact badly
    # with aspect_rules_js's symlink graph.
    public_hoist_packages = {
        "@vue/compiler-dom": [""],
        "@vue/compiler-sfc": [""],
        "@vue/server-renderer": [""],
        "@vue/shared": [""],
        "@vue/reactivity": [""],
        "@vue/runtime-core": [""],
        "@vue/runtime-dom": [""],
    },
)
use_repo(npm, "npm")

# Re-export pnpm itself so `bazel run -- @pnpm install` works without
# requiring a host pnpm install — useful for refreshing pnpm-lock.yaml
# after editing package.json on a machine without nvm/pnpm.
pnpm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "pnpm",
    dev_dependency = True,
)
use_repo(pnpm, "pnpm")
