load("@py_pip//:requirements.bzl", "all_requirements", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools/bazel:pytest.bzl", "transcribe_pytest")

# Consumed by //tools/bazel:asr_commit_hash_consistency_test as `data`.
exports_files(
    ["constants.py"],
    visibility = ["//visibility:public"],
)

# Captured raw chunked ASR output. Used by both:
#  - //transcribe:asr_results_to_captions_post_processing_pipeline_test
#  - //transcribe_rs/caption-core:post_processing_pipeline_test
# so the two implementations are exercised against the same inputs.
exports_files(
    glob(["test_fixtures/*.json"]),
    visibility = ["//transcribe_rs:__subpackages__"],
)

# `imports = ["."]` puts this directory on PYTHONPATH for downstream
# py_test targets, mirroring the flat-package layout the transcribe
# package already uses (modules import each other by bare name:
# `from schema import ...`, not `from transcribe.schema import ...`).

# Cheap subset: pure-Python modules. No torch, nemo, or pyannote at
# import time. These are the only modules needed by the post-processing
# / parsing / schema tests.
py_library(
    name = "transcribe_lib_cheap",
    srcs = [
        "asr_results_to_captions.py",
        "captions_json5_lib.py",
        "constants.py",
        "repo_root.py",
        "schema.py",
        "snapshot_test_utils.py",
    ],
    imports = ["."],
    deps = [
        requirement("json5"),
        requirement("pydantic"),
        requirement("syrupy"),
    ],
    visibility = ["//visibility:public"],
)

# Heavy subset: pulls torch, pyannote, soundfile, numpy at import time.
# Only consumed by the `requires-torch`-tagged tests below. Kept here
# (rather than in a separate sibling package) so the BUILD layout
# mirrors the source layout: one BUILD file per directory.
py_library(
    name = "transcribe_lib_heavy",
    srcs = [
        "audio_utils.py",
        "bulk_cli.py",
        "embed_cli.py",
        "recognizer.py",
        "transcribe_cli.py",
    ],
    imports = ["."],
    # Depend on the whole resolved lockfile rather than enumerating
    # individual requirements. pip.parse's `requirement(...)` macro
    # only links the package METADATA's `Requires-Dist` chain, which
    # is too lossy for tools (nemo-toolkit, pyannote.audio) that
    # import optional sub-modules at top level — every `[extras]`
    # group and runtime `import` chain would otherwise need a
    # hand-curated allowlist.
    #
    # Caveat: `all_requirements` includes `megatron-core`, which only
    # ships as an sdist and whose setup.py shells out to `python3 -m
    # pybind11 --includes` (fails under rules_python's hermetic build
    # env). It isn't reached by the inference paths these tests
    # exercise, but pulling it via `all_requirements` forces the wheel
    # build during analysis. The MODULE.bazel-level `pip.override` for
    # megatron-core (or a pip.parse `experimental_index_url_overrides`
    # that drops it) is the proper fix — for now the assumption is
    # that you have CommandLineTools + a working python3 with pybind11
    # available on PATH so the sdist builds; if not, drop megatron-core
    # from requirements_bazel.txt by hand after `uv export`.
    deps = [":transcribe_lib_cheap"] + all_requirements,
    visibility = ["//visibility:public"],
)

# conftest.py imports `repo_root` (a transcribe module) and `syrupy`,
# so it goes in the cheap library's runfiles via `data`. Listed as a
# filegroup rather than added to srcs because rules_python doesn't
# auto-discover conftest in `srcs` — pytest finds it by directory.
filegroup(
    name = "conftest",
    srcs = ["conftest.py"],
    visibility = ["//visibility:public"],
)

_CHEAP_TEST_DATA = [
    ":conftest",
    "pytest.ini",
] + glob([
    "__snapshots__/**",
    "test_fixtures/**",
], allow_empty = True)

_CHEAP_TEST_DEPS = [
    ":transcribe_lib_cheap",
    requirement("pytest"),
    requirement("syrupy"),
]

# -----------------------------------------------------------------------------
# Cheap tests — no torch/nemo/pyannote.
# -----------------------------------------------------------------------------

transcribe_pytest(
    name = "captions_json5_lib_test",
    test_file = "captions_json5_lib_test.py",
    data = _CHEAP_TEST_DATA,
    deps = _CHEAP_TEST_DEPS,
)

transcribe_pytest(
    name = "asr_results_to_captions_test",
    test_file = "asr_results_to_captions_test.py",
    data = _CHEAP_TEST_DATA,
    deps = _CHEAP_TEST_DEPS,
)

transcribe_pytest(
    name = "asr_results_to_captions_post_processing_pipeline_test",
    test_file = "asr_results_to_captions_post_processing_pipeline_test.py",
    data = _CHEAP_TEST_DATA,
    deps = _CHEAP_TEST_DEPS,
)

# -----------------------------------------------------------------------------
# Heavy tests — `manual` so default `bazel test //...` skips them on
# cold caches. Drop `manual` once pip.parse reliably materializes torch
# + audio wheels on your dev + CI hosts.
# -----------------------------------------------------------------------------

_HEAVY_TEST_DEPS = _CHEAP_TEST_DEPS + [
    ":transcribe_lib_heavy",
    requirement("numpy"),
    requirement("soundfile"),
    requirement("typer"),
]

# Heavy tests load audio fixtures via REPO_ROOT/"test_data/...", which
# `repo_root.py` computes as the parent of this directory. Adding the
# repo-level `:test_data` filegroup ensures those files land in the
# runfiles tree at `_main/test_data/`.
_HEAVY_TEST_DATA = _CHEAP_TEST_DATA + ["//:test_data"]

_HEAVY_TAGS = ["requires-torch"]

transcribe_pytest(
    name = "bulk_cli_test",
    test_file = "bulk_cli_test.py",
    data = _HEAVY_TEST_DATA,
    deps = _HEAVY_TEST_DEPS,
    tags = _HEAVY_TAGS,
)

transcribe_pytest(
    name = "embed_cli_test",
    test_file = "embed_cli_test.py",
    data = _HEAVY_TEST_DATA,
    deps = _HEAVY_TEST_DEPS,
    tags = _HEAVY_TAGS,
)

transcribe_pytest(
    name = "transcribe_cli_test",
    test_file = "transcribe_cli_test.py",
    data = _HEAVY_TEST_DATA,
    deps = _HEAVY_TEST_DEPS,
    tags = _HEAVY_TAGS,
)

transcribe_pytest(
    name = "transcribe_cli_apollo_test",
    test_file = "transcribe_cli_apollo_test.py",
    data = _HEAVY_TEST_DATA,
    deps = _HEAVY_TEST_DEPS,
    tags = _HEAVY_TAGS,
)

transcribe_pytest(
    name = "remux_mp3_test",
    test_file = "remux_mp3_test.py",
    data = _HEAVY_TEST_DATA,
    deps = _HEAVY_TEST_DEPS,
    tags = _HEAVY_TAGS,
)

# Cross-language CLI parity tests. The Rust binaries are wired as `data`
# so Bazel keeps them rebuilt and on disk, but TRANSCRIBE_RS_BIN /
# EMBED_RS_BIN are NOT injected by Bazel — the tests `pytest.skip` when
# the vars are unset, so default `bazel test //...` no-ops these (the
# binaries need network access to pull HF models, which the Bazel
# sandbox blocks). Trigger manually:
#
#   bazel build //transcribe_rs/transcribe-rs //transcribe_rs/embed-rs
#   TRANSCRIBE_RS_BIN=$(bazel info bazel-bin)/transcribe_rs/transcribe-rs/transcribe-rs \
#   EMBED_RS_BIN=$(bazel info bazel-bin)/transcribe_rs/embed-rs/embed-rs \
#   bazel test //transcribe:transcribe_rs_parity_test \
#     --test_env=TRANSCRIBE_RS_BIN --test_env=EMBED_RS_BIN \
#     --test_output=streamed
transcribe_pytest(
    name = "transcribe_rs_parity_test",
    test_file = "transcribe_rs_parity_test.py",
    data = _HEAVY_TEST_DATA + [
        "//transcribe_rs/transcribe-rs:transcribe-rs",
        "//transcribe_rs/embed-rs:embed-rs",
    ],
    deps = _CHEAP_TEST_DEPS,
    # `manual` keeps default `bazel test //...` from picking them up
    # even on a host that happens to have the env vars exported.
    tags = _HEAVY_TAGS + ["requires-network", "manual"],
)

# Integration test for the released Rust ASR binaries. Downloads
# transcribe-rs-v${APP_VERSION}-darwin-arm64 + embed-rs-v${APP_VERSION}-darwin-arm64
# from https://github.com/<repo>/releases/download/v${APP_VERSION}/ and
# runs them end-to-end. APP_VERSION is read from electron/constants.ts
# at test time (the same source the GHA workflow uses to name the
# uploaded artifacts), so a checkout at v1.6.1 exercises the v1.6.1
# release.
#
# Skips automatically if (a) the host isn't darwin-arm64, or (b) the
# release artifact returns 404 (release for this version not published
# yet — useful when developing the release flow itself).
#
# Tagged `manual` so default `bazel test //...` skips it; `requires-network`
# documents the dependency. Trigger:
#
#   bazel test //transcribe:released_rust_asr_test --test_output=streamed
transcribe_pytest(
    name = "released_rust_asr_test",
    test_file = "released_rust_asr_test.py",
    # The test reads electron/constants.ts to figure out which release
    # tag to download from. Pull it into runfiles via the existing
    # exports_files declaration at //:BUILD.bazel.
    data = _HEAVY_TEST_DATA + ["//:electron/constants.ts"],
    deps = _CHEAP_TEST_DEPS,
    tags = _HEAVY_TAGS + ["requires-network", "manual"],
)
