[project]
name = "transcribe"
version = "0.1.0"
description = "Media transcription and speaker diarization tool using NVIDIA Parakeet TDT and pyannote.audio"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "librosa>=0.11.0",
    "megatron-core>=0.10.0",
    "nemo-toolkit[asr]>=2.5.0",
    "numpy>=2.0",
    "pandas>=2.0.0",
    "pydantic>=2.12.3",
    "scikit-learn>=1.6.0",
    "soundfile>=0.13.1",
    "syrupy>=5.0.0",
    "tqdm>=4.66.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    # `nemo-toolkit[asr]>=2.7.x` hard-pins `transformers>=4.57,<4.58` —
    # we can't move ahead of that band without giving up NeMo (and
    # hence the Parakeet ASR path). The earlier `<4.54` ceiling here
    # was redundant with nemo's pin AND blocked transitive updates,
    # so it's gone; the resolver now picks 4.57.x by following nemo.
    "transformers>=4.53.0",
    "typer>=0.20.0",
    # Diarization dependencies
    "pyannote-audio>=4.0.0",
    "torchvision>=0.15.0",
    "pybind11>=3.0.1",
    "libsql-client>=0.3.0",
    #    "torchcodec",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "imageio-ffmpeg>=0.6.0",
    "json5>=0.14.0",
    "umap-learn>=0.5.11",
    # Remote GPU worker for microsoft/VibeVoice-ASR-HF (9B model, doesn't fit
    # locally on most laptops). See transcribe/vibevoice_modal.py.
    "modal>=0.64",
]

[project.scripts]
transcribe_cli = "transcribe_cli:app"
diarize = "diarize:app"
embed_cli = "embed_cli:app"
bulk_cli = "bulk_cli:app"

[dependency-groups]
dev = [
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
# 7-day dependency cooldown: only allow package versions published at least 7 days ago.
# Update this date periodically (it's not rolling — it's a fixed point in time).
exclude-newer = "2026-05-21T00:00:00Z"

# Override nemo-toolkit's conservative `numpy<2.0` constraint — it
# works fine on numpy 2.x and the project depends on numpy 2.x for
# torch interop. Upper bound intentionally absent: previously pinned
# `<2.4` because numba lagged, but numba 0.65+ supports the newer
# numpy ABI so we let the resolver pick the latest.
#
# Override torchcodec to only install on platforms with prebuilt
# wheels. pyannote-audio 4.0+ made torchcodec optional and falls back
# to torchaudio when missing — see diarization/cli.py.
override-dependencies = [
    "numpy>=2.0",
    "torchcodec>=0.6.0; (sys_platform == 'darwin') or (sys_platform == 'win32') or (sys_platform == 'linux' and platform_machine == 'x86_64')"
]

[tool.uv.sources]
# torchcodec is made optional via override-dependencies above
# On platforms without torchcodec wheels (Linux aarch64), pyannote.audio will use torchaudio for audio loading
# See diarization/cli.py which preloads audio using torchaudio to support both scenarios

[tool.setuptools]
# Use find_packages to discover Python modules, exclude test directories
py-modules = [
    "audio_utils",
    "bulk_cli",
    "transcribe_cli",
    "embed_cli",
    "asr_results_to_captions",
    "captions_json5_lib",
    "capture_raw_asr_output",
    "constants",
    "recognizer",
    "repo_root",
    "schema",
]

[tool.coverage.run]
omit = [
    "capture_raw_asr_output.py",
    "__snapshots__/*",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "test_data*", "test_fixtures*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


